--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@ body
     color: #333;
     text-align: center;
     font-family: "Arial";
-    font-size: 20px;
+    font-size: 16px;
     margin: 0;
     padding: 0;
 }
@@ -21,6 +21,8 @@ body
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
+    
+
 }
 #container 
 {
@@ -33,4 +35,8 @@ body
 #container h1 
 {
     font-size: 20px;
+    border-radius: 0vmin;
+}
+#post{
+    padding: 1em;
 }
