--- a/css/estilos.css
+++ b/css/estilos.css
@@ -27,7 +27,7 @@ body
 #container 
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -35,8 +35,14 @@ body
 #container h1 
 {
     font-size: 20px;
-    border-radius: 0vmin;
+
 }
 #post{
     padding: 1em;
+}
+#footer {
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
